--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2"
-    
+    "express-handlebars": "^7.1.2",
+    "msnodesqlv8": "^4.2.1",
+    "mssql": "^10.0.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
-  
 }
