--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "backend",
+  "name": "test1",
   "version": "1.0.0",
-  "description": "backend shopee",
-  "main": "src/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.js"
   },
-  "keywords": [
-    "shopee",
-    "phongnguyen"
-  ],
-  "author": "",
+  "author": "phong",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8",
+    "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
-    "msnodesqlv8": "^4.2.1",
-    "mssql": "^10.0.2"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.13.0"
   }
 }
