--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +21,7 @@
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "antd": "^5.17.3",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "firebase": "^10.12.0",
@@ -29,6 +32,7 @@
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.10",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
