--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,18 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "antd": "^5.17.3",
+    "antd": "^5.18.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "firebase": "^10.12.0",
+    "intl": "^1.2.5",
     "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
